--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@
               <div class="testimonial-item">
                 <img src="assets/img/ammini.jpg" class="testimonial-img" alt="">
                 <h3>PUNNYA P P</h3>
-                <h4>Teacher</h4>
+                <h4>Asst.Professor</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Well, my sister is a hardworking agricultural student who is always busy tending to her crops and animals. Meanwhile, I'm over here trying to maintain a long distance relationship with her while she's out wrangling chickens and planting seeds. I swear, trying to schedule a phone call with her is like trying to coordinate a harvest during a thunderstorm - it's a whole ordeal!.
@@ -289,7 +289,7 @@
               <div class="testimonial-item">
                 <img src="assets/img/devu.jpg" class="testimonial-img" alt="">
                 <h3>VARSHA K P</h3>
-                <h4>Student</h4>
+                <h4>Athlete</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   My sister is like a k-pop idol in the agricultural world - always working hard and never afraid to get her hands dirty! She's basically a "sunbae" (senior) when it comes to farming techniques and plant knowledge. I'm just here trying to keep up with her "mochi" (soft and squishy) farming skills! .
